# ChangeLog for dev-perl/File-MMagic
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-perl/File-MMagic/ChangeLog,v 1.60 2014/08/22 17:55:07 axs Exp $

*File-MMagic-1.280.0-r1 (22 Aug 2014)
*File-MMagic-1.290.0-r1 (22 Aug 2014)
*File-MMagic-1.270.0-r1 (22 Aug 2014)
*File-MMagic-1.300.0-r1 (22 Aug 2014)

  22 Aug 2014; Ian Stakenvicius (_AxS_) <axs@gentoo.org>
  +File-MMagic-1.270.0-r1.ebuild, +File-MMagic-1.280.0-r1.ebuild,
  +File-MMagic-1.290.0-r1.ebuild, +File-MMagic-1.300.0-r1.ebuild,
  -File-MMagic-1.270.0.ebuild, -File-MMagic-1.280.0.ebuild,
  -File-MMagic-1.290.0.ebuild, -File-MMagic-1.300.0.ebuild:
  bumped EAPI to 5; committed directly to stable as no other changes present and
  revbump helps stable systems to keep from dieing on perl-5.18 upgrade

*File-MMagic-1.300.0 (25 Aug 2013)

  25 Aug 2013; Patrick Lauer <patrick@gentoo.org> +File-MMagic-1.300.0.ebuild:
  Bump

*File-MMagic-1.290.0 (15 Jul 2012)

  15 Jul 2012; Torsten Veller <tove@gentoo.org> +File-MMagic-1.290.0.ebuild:
  Version bump

  24 Jun 2012; Torsten Veller <tove@gentoo.org> metadata.xml:
  Update CPAN upstream info

*File-MMagic-1.280.0 (16 Jun 2012)

  16 Jun 2012; Torsten Veller <tove@gentoo.org> +File-MMagic-1.280.0.ebuild:
  Version bump

  04 Sep 2011; Torsten Veller <tove@gentoo.org> -File-MMagic-1.27.ebuild:
  Cleanup

  03 Sep 2011; Torsten Veller <tove@gentoo.org> File-MMagic-1.270.0.ebuild:
  Merge stable keywords from former version scheme ebuild

*File-MMagic-1.270.0 (30 Aug 2011)

  30 Aug 2011; Torsten Veller <tove@gentoo.org> +File-MMagic-1.270.0.ebuild:
  Change version scheme

  01 May 2009; Torsten Veller <tove@gentoo.org> -File-MMagic-1.25.ebuild:
  Cleanup

  15 Apr 2007; Markus Rothe <corsair@gentoo.org> File-MMagic-1.27.ebuild:
  Stable on ppc64

  05 Mar 2007; Andrej Kacian <ticho@gentoo.org> File-MMagic-1.27.ebuild:
  Stable on x86, bug #169152.

  28 Dec 2006; Javier Villavicencio <the_paya@gentoo.org>