@@ -1,6 +1,6 @@
 # Copyright 1999-2014 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/File-MMagic/File-MMagic-1.290.0-r1.ebuild,v 1.1 2014/08/22 17:55:07 axs Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/File-MMagic/Attic/File-MMagic-1.290.0-r1.ebuild,v 1.2 2014/11/30 20:22:38 dilfridge Exp $
 
 EAPI=5
 
@@ -12,6 +12,6 @@ DESCRIPTION="The Perl Image-Info Module"
 SRC_TEST="do"
 
 SLOT="0"
-LICENSE="|| ( Artistic GPL-2 )"
+LICENSE="File-MMagic"
 KEYWORDS="~alpha ~amd64 ~ia64 ~ppc ~ppc64 ~sparc ~x86 ~x86-fbsd"
 IUSE=""
