@@ -5,16 +5,28 @@ DIST File-MMagic-1.27.tar.gz 21332 SHA256 d82d4f07c7a321641f304460d4878303cb2241
 DIST File-MMagic-1.28.tar.gz 21859 SHA256 946f551fd579252f739f6dbcd8a45894094d405983e3f0a8da66c2ec8f10b362 SHA512 7855be9b6e3fe08a057b0f3defa52a01f74b4fe23d46eea962fc407922cb8a3e5a1e8c4b813332cf7b3aea9f1232eac7cc29b84a9ad7e23d63200c7d2677fbb0 WHIRLPOOL 47bad7085750b5976ee2626c0da823e3fa7d850063059be9965e6b23ab897638165637ae7e24eb59eaf943a668e57401faa2605dd5759929dce1897522d02d8d
 DIST File-MMagic-1.29.tar.gz 22295 SHA256 73ed97458734a888cc163dea538497a6493da9914acb89d007dad837b89b8a34 SHA512 63e7d7ae6136eb9f5fcd40021fbb5e4330beb1e6c32bbd9aac02eff6157825735b69a8e66387a23730ef87cab7bb2e01f4898ff2099b208d42b94f8013b41e0f WHIRLPOOL 0ee77ea26f9b309b04ae52bb31a3fb1c768dcf49b1d510a5238eba8fd6202ed3a122415ebbf6327631db73826cbfbf5849bd8571a75c5f69d7fecc5400c42923
 DIST File-MMagic-1.30.tar.gz 22346 SHA256 cf0c1b1eb29705c02d97c2913648009c0be42ce93ec24b36c696bf2d4f5ebd7e SHA512 4013fc1178cdf9c1a141652290e091f296b9bef54b9f4301926d9ed0a5262bbf67213773774e41aab8630bed20c2c9441befe55db9ca04a56d07099061b50e25 WHIRLPOOL 2352de876aeed6e73fcce20f29958c40cc4dd22d2429db35fd738f05f82f1a040ad4849d7e5b1a83504a61db0884009032879342b00ee83fc6dd1e9b561c2588
-EBUILD File-MMagic-1.270.0-r1.ebuild 461 SHA256 faa9364e7860230fc8373a5d7b2fe45c965dfa254ae05f1c5973ebb5cd4cef05 SHA512 74398b62b0705d8e8b97d36d30928af69f92fc6a9056063b588e73cd078e6fb50ba20a7786c2f67a08e27029b539431a9da48a556dc75801ce9e84555e7c2c12 WHIRLPOOL 3a5bebf8a4e4f414546a4bacdf4df3b55d20b0d0005e42bd54ba8643d553447605819a41abb7fcfb140bae66dfa5dbd16287e916398a9784eb420bd696e66d97
-EBUILD File-MMagic-1.280.0-r1.ebuild 468 SHA256 b1f52986072a1613eccc7ab40850fa6682c247e650b7dacba214bfe3f352d8b6 SHA512 aac9ca55c718186b82b9c35bc1c07b8d0a936e39c4c2f9128b47e41a916c644707d179f2b19043b7e8dd2b995ecc6d3348cc3525d6aa7051e55fb84d67a6cc64 WHIRLPOOL 5a8c64e9ebd166426ccf8cea9e39b18df68c65f64bb780dbaf068e080711a4a2c126fa3c271785b3f2b1a40c661260cb77cb5c342813c432db989016d4458440
-EBUILD File-MMagic-1.290.0-r1.ebuild 468 SHA256 59863f7a5fd394b682566d2fe4f334302fe49bd4fd0ebfb7be8902ec3acaa4cf SHA512 e55372117d0024b49b74b95d3e0aa75be634364a0006fbdd6af816a25b1b082c07d5c437eef1cdda79f09f37b4060213982a3a91b1295c1d72001d94074fca4c WHIRLPOOL c21cc81cfe03b34f49b940d94a4dd2f7e1c71068e07b22836d66f6cf2de01d5df649e53b208c9de0d4b73a5b3278ba269754eb390f62f69939461546e36c0314
-EBUILD File-MMagic-1.300.0-r1.ebuild 468 SHA256 2c0f2e171182b2a78568a1b80f7763a8ab97c68202b804bc8c8518bf41e932e3 SHA512 b3c29d77bc664f00b2e24c08bee428650a1c115c04ac9417d53e558df3e0cd26fa1964deebd8a00c18feeb3b541d84313d2e9487e215aabf5c4965e907b39e10 WHIRLPOOL 2416407b9ea4c75bb9b7829ec60017a82cc0ce4fc60726629002c0842335e8e6b9ee01585c91d817af36ad1a8f5672703db71abfd6a485c7b6f9a6bcefba0713
-MISC ChangeLog 7466 SHA256 c85f23d6c577998b8b200e6d956c75f8ce5f39e3ef2cf8419a266b3c6a807f88 SHA512 713b819cea6381e47dc52a331d8a4ae0c373517d606b54f7b1946830f65f8076b361675dff1102403823cb075175cd42c8657fe0c21c1d0b68487f427d275395 WHIRLPOOL 9721e656452cf15255a585fc35dcbc7b96377c36d1828a084905797fd3ae9978b03b7d7118aeea952d93daec402c04baef3acae076ce499dade81bf0920ca3e6
+EBUILD File-MMagic-1.270.0-r1.ebuild 457 SHA256 25fcd4b4d6fcbe5dbd1038d38e0467a06efd81d7e592753d38f46b77ad7ed022 SHA512 2747a800e34f745384b75997752526965726bc6647f59ff7bd46190d3a659415466be4700098b942bae9986209ae877456c1f8b3a70c4ac902918c5990420396 WHIRLPOOL 98b73e6914df3d67723b08a954e276a58f40f6a3e9e6f3b28585bcdcd34ccc19b9774e5b25bd8a219c9563eba1535872c5e68ae7335e187974950e5236eacc26
+EBUILD File-MMagic-1.280.0-r1.ebuild 464 SHA256 91de0096e254f6f309d2c1ebee20d68d25e4a13f9dd1f1a78f443b408c1cee26 SHA512 174b4743f0f55459debb925b4976dd18f7241b64683af5316a41d1446229e91b7bcbdf4c48eeede8af535cbdff853894b0e8d04ea4edd8ebbb6ca0f36a48a0e5 WHIRLPOOL 53c3dc5db6c01630666532c0f1a2c7165f191bcfa9321c1eb977c23557769212fbe3ced562af301467ada2d0d432a49879eba619e77075c007c9641f0dc7aaf2
+EBUILD File-MMagic-1.290.0-r1.ebuild 464 SHA256 1b4a804310106df012d43eddd9f27d4d8480ef896199b5d43395ae1b3a3c9b6e SHA512 460496f448cc2a8036de8a22a5a49b3ab236fead0df446694286a5105b4e4a01b6617d870e57989c6e1f769bb643508206ea2bac38ff475c9ea89f60e7f2221d WHIRLPOOL c9d0c001e94a2f3da064d4201142a7bf7401e028c21b3390efc93e65f79c13071410a979227a5aed05fd14261eb91c31974fc7540e39f049bc579a8991e74791
+EBUILD File-MMagic-1.300.0-r1.ebuild 464 SHA256 5973a6e8b73789674b13f28f6c549d3b7054cf24b69498d14ebaee1b2d460e06 SHA512 a2d38fffc8d1b9b5e6b36707ed6a5caee7caad4b8c297044c7782406f46fbcf7b83d53cb5dba863280432ad93de932cfa1474488e0d11d1ada6b302979b44ca7 WHIRLPOOL fdee2f7dba0509f35c710773089df63c451c4799f44e8b883106acb2e6250d94c075800ae39639a7199e29adf8e40b0473872fb663e4c81a1485478f30d406f7
+MISC ChangeLog 7684 SHA256 b631c6bafa8fc4c67734b61eeeca961c50fef730d90197cd5f68eed773c3b568 SHA512 47b39b198735cd48134df08953729fc7ea3f30ea075a292b93efc72d1508a72957ee9bb495c59d92d8dab86bddac5eac6d861baa36da1fc5941172b665b49c9a WHIRLPOOL fcabdd1475ce336e04a3783bf4a47a996db2ac763f3934b06294aef3bfb973b2271b2eaf3dda659d2fdc19d279623566d41e65b63481c5f4734f2e0a6fbfd90b
 MISC metadata.xml 296 SHA256 fdff3a2b687534a4445f05124411e01b5ba47281dc9ee3ad5372e753ad7ff4d5 SHA512 87e891fd0524c57d087ec57e09ad97e9af87da4d3907109b95b1a3a8edb90b702c8891e8677d921c355ecec18a9ad2a02302d1236a0c6a661a46d19f351611c6 WHIRLPOOL 87dbce927aa2a8916e33c7ad6aca249d75d2fb184fe96626e9b9ac65ca85487b2553ae7f25de18e92207bf8294df4c8ab4c772117a6ab77441d8a0255df4c0da
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2
+Version: GnuPG v2.0
 
-iF4EAREIAAYFAlP3hAQACgkQ2ugaI38ACPBvWQD/Tc7pVMDSAI6IPub3HLartlbK
-jcwRT7CtPwsfP9nmvbEBAJeOxlBaKbbwpLxi0krxJWVGbZGjI6uJ7WxeNdX1AIoH
-=EPtH
+iQJ8BAEBCABmBQJUe3yXXxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
+ZW5wZ3AuZmlmdGhob3JzZW1hbi5uZXQwNzlCRDk4QzA4RENBRkYzQUEwRjQzMDlF
+QkU2QTMzNkJFMTkwMzlDAAoJEOvmoza+GQOcPLEQAJs8GvnVmchKB/paw+8B7d+X
+6vCuf/DfIL009z9zL/hPraOjaTX8QJoTIJLlWqV1Kolt2sJP4SsmGdrGRl1CiSxw
+aXC3xApGfGrQPmWTmSvCkYZOHL8tp36IeoF1iBCedRXkJNJFZRD67fHMk/tkrNky
+AS5dRRrs0O1nvvNNAv+j6zZ8yi+S6cMCXIBEtbfA3HLtKVXsA26sHQfnw65fGU7C
+OUs9YWAAIUvJuNoQZSJhzsX3XzfIlaKLkBwqt4cwBaGAL3xfsZcrOMcC2ZlIj15D
+wGDrvxkaokTwqjd5t9Zz4FpSzxduYvk1DXb/PZKhtTWcj1Eck9v/mWCmaVc0utAM
+ZxQdIH441fcFb/ARR9gCW9T6q7g8GfCH2Px+0yUH5SBbHqF3ETqDaXar2vTY+i2Q
+rtwWIRoLZvjpV6RI8RiRGK0nETvhzsuWhe75e+TfwEzkJArYV8+hfBdpOuXTEy2N
+D+CLCXT+mPssC9VFrzfFnm2TFKFL7suVTPOG2NhWs6eaCPTF2K6D/tx6IW4hA7k6
+ahsc77Ta6JTZ0xtupvq8DsPO5HgdA2WNnBLqeGXWhsblTOWt0XD3V8cW+vVVes0m
+1x5rce275DRR5oQynyiZs2rilcYkgN8ksFrPDOPJLD8/uXOOqVOIbcSi8XEgpQHD
+I30SnDbfqNXoplnPJ71d
+=VCgx
 -----END PGP SIGNATURE-----
