@@ -1,6 +1,11 @@
 # ChangeLog for dev-perl/File-MMagic
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/File-MMagic/ChangeLog,v 1.60 2014/08/22 17:55:07 axs Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/File-MMagic/ChangeLog,v 1.61 2014/11/30 20:22:38 dilfridge Exp $
+
+  30 Nov 2014; Andreas K. Huettel <dilfridge@gentoo.org>
+  File-MMagic-1.270.0-r1.ebuild, File-MMagic-1.280.0-r1.ebuild,
+  File-MMagic-1.290.0-r1.ebuild, File-MMagic-1.300.0-r1.ebuild:
+  Fix license, bug 381183
 
 *File-MMagic-1.280.0-r1 (22 Aug 2014)
 *File-MMagic-1.290.0-r1 (22 Aug 2014)
